k8s/canary/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: price-api-svc
  labels:
    app: price-api
spec:
  type: ClusterIP
  selector:
    app: price-api
  ports:
  - name: http
    protocol: TCP
    port: 8000
    targetPort: 8000
